--- a/.beamignore
+++ b/.beamignore
@@ -26,4 +26,16 @@ drive/MyDrive
 *.pyc
 .next/
 .circleci
-frontend/
+frontend/src/
+frontend/node_modules/
+frontend/public/
+frontend/.yarnrc
+frontend/yarn.lock
+frontend/package.json
+frontend/tsconfig.json
+frontend/tsconfig.app.json
+frontend/tsconfig.node.json
+frontend/vite.config.ts
+frontend/eslint.config.js
+frontend/README.md
+frontend/index.html
