--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,9 @@ croniter==3.0.4
 cryptography==45.0.4
 exceptiongroup==1.3.0
 fastapi==0.115.13
-fastmcp==2.9.0
+fastmcp==2.10.2
+baml-py==0.90.2
+
 grpcio==1.69.0
 grpclib==0.4.8
 h11==0.16.0
@@ -30,7 +32,7 @@ isort==5.13.2
 jinja2==3.1.6
 markdown-it-py==3.0.0
 markupsafe==3.0.2
-mcp==1.9.4
+mcp>=1.10.0
 mdurl==0.1.2
 multidict==6.5.0
 mypy-extensions==1.1.0
